--- a/Algebra/Commutative Algebra 1/Commutative Algebra 1.tex
+++ b/Algebra/Commutative Algebra 1/Commutative Algebra 1.tex
@@ -45,7 +45,7 @@ Let $R$ be a commutative ring. Recall that an ideal of $R$ is a subset $I\subset
 \item $I\cap J\subseteq P$. 
 \item $I\subseteq P$ or $J\subseteq P$. 
 \end{itemize} \tcbline
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item $(1)\implies(2)$: Let $f\in I\cap J$. Then $f\in I$ and $f\in J$ implies that $f^2\in IJ\subseteq P$. Since $P$ is prime, we conclude that $f\in P$. 
 \item $(2)\implies(3)$: Suppose that $f\in I$ and $f\notin P$. For any $g\in J$, we have $fg\in I\cap J\subseteq P$. Since $P$ is prime and $f\in I$, we have $J\in P$. 
@@ -60,7 +60,7 @@ Let $R$ be a commutative ring. Recall that an ideal of $R$ is a subset $I\subset
 \item Let $P$ be an ideal of $R$. If $\bigcap_{i=1}^nI_i\subseteq P$, then $I_i\subseteq P$ for some $i$. 
 \item Let $P$ be an ideal of $R$. If $P=\bigcap_{i=1}^nI_i$, then $I_i=P$ for some $i$. 
 \end{itemize} \tcbline
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item We prove the contrapositive by induction $k$. When $k=1$, the case is clear. Suppose that $I\not\subseteq P_i$ for $1\leq i\leq k-1$ implies $I\not\subseteq\bigcup_{i=1}^{k-1}P_i$. Now suppose that $I\not\subseteq P_i$ for $1\leq i\leq k$. By induction hypothesis, for each $i$, there exists $x_j\in I$ such that $x_j\notin\bigcup_{i\neq j}P_i$. So $x_j\notin P_i$ for $j\neq i$. There are two cases. If $x_j\notin P_j$ for some $j$, then $x_j\notin\bigcup_{j\neq i}P_i\cup P_j=\bigcup_{i=1}^kP_i$ so we are done. If $x_j\in P_j$ for all $j$, then consider the element $y=\sum_{i=1}^k\prod_{j\neq i}x_j\in I$. Notice that $x_j\in P_j$ for $j\neq i$ implies that $\prod_{j\neq i}x_j$ lie in $P_k$ for any $k\neq i$. It is not an element of $P_i$ because $P_i$ is prime and $x_j\notin P_i$ for $j\neq i$. Then we conclude that $y$ does not lie in $P_i$ for any $i$. Hence $y\notin\bigcup_{i=1}^kP_i$ and we are done. 
 \item We prove the contrapositive. Suppose that $I_i\not\subseteq P$ for all $i$. Then for each $i$, there exists $x_i\in I_i$ such that $x_i\notin P$. Then $\prod_{i=1}^nx_i\in\bigcap_{i=1}^nI_i$ is not an element of $P$ since $P$ is a prime ideal. Hence we are done. 
@@ -95,7 +95,7 @@ Note that this is different from nilpotent ideals, as nilpotency is a property o
 \item $N(R)$ is an ideal of $R$
 \item $N(R/N(R))=0$
 \end{itemize}\tcbline
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Suppose that $r,s$ are nilpotent, meaning that $r^n=0$ and $s^m=0$. Then $(r+s)^{n+m}=0$. Moreover, if $t\in R$ then $t\cdot r$ is also nilpotent
 \item Let $r\notin N(R)$. Every element $r+N(R)\in R/N(R)$ has the property that $r^n\neq 0$. Consider $(r+N(R))^n=r^n+N(R)$. If $r^n\in N(R)$ then $r^n=u$ for some nilpotent $u$, which means that $r^n$ is nilpotent and thus $r$ is nilpotent, a contradiction. This means that $r+N(R)\notin N(R/N(R))$ for all $r\notin N(R)$ and thus $N(R/N(R))=0$
@@ -160,7 +160,7 @@ The radical of an ideal is a very different notion from the radical of module.
 \item $\sqrt{I^m}=\sqrt{I}$ for all $m\geq 1$
 \item $\sqrt{I}=R$ if and only if $I=R$
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Let $r\in I$. Then $r^1\in I$ Thus by choosing $n=1$ we shows that $r^n\in I$. Thus $r\in\sqrt{I}$. 
 \item By the above, we already know that $\sqrt{I}\subseteq\sqrt{\sqrt{I}}$. So let $r\in\sqrt{\sqrt{I}}$. Then there exists some $n\in\N$ such that $r^n\in\sqrt{I}$. But $r^n\in\sqrt{I}$ means that there exists some $m\in\N$ such that $(r^n)^m\in I$. But $nm\in\N$ is a natural number such that $r^{nm}\in I$. Hence $r\in\sqrt{I}$ and so we conclude. 
@@ -176,7 +176,7 @@ The radical of an ideal is a very different notion from the radical of module.
 \item $\sqrt{IJ}=\sqrt{I\cap J}=\sqrt{I}\cap\sqrt{J}$
 \item $\sqrt{I+J}=\sqrt{\sqrt{I}+\sqrt{J}}$
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Let $x\in\sqrt{I}$. Then $x^n\in I$ for some $n\in\N$. Then $x^n\in J$ so $x\in\sqrt{J}$. 
 \item Since $IJ\subseteq I\cap J\subseteq I,J$, we already have $\sqrt{IJ}\subseteq\sqrt{I\cap J}\subseteq\sqrt{I}\cap\sqrt{J}$. Let $x\in\sqrt{I}\cap\sqrt{J}$. Then there exists $n,m\in\N$ such that $x^n\in I$ and $x^m\in J$. Then $x^n\cdot x^m=x^{n+m}\in IJ$ implies that $x\in\sqrt{IJ}$. 
@@ -240,7 +240,7 @@ So radical, prime and maximal ideals all have characterizations using the quotie
 \item $\text{Spec}(\Z/24\Z)=\{(2+24\Z),(3+24\Z)\}$
 \item $\text{Spec}(\R[x])=\{(f)\;|\;f\text{ is irreducible }\}$
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item The only ideals of $\Z/6\Z$ are $(2+6\Z)$ and $(3+6\Z)$. We need to find which ones are prime ideals. Now $\Z/6\Z\setminus(2+6\Z)$ consists of $1+6\Z$, $3+6\Z$ and $5+6\Z$. No multiplication of these elements give an element of $(2+6\Z)$. So any two elements in $\Z/6\Z$ which multiply to an element of $(2+6\Z)$ must contain one element that lie in $(2+6\Z)$. Hence $(2+6\Z)$ is prime. This is similar for $(3+6\Z)$. Hence $\text{Spec}(\Z/6\Z)=\{(2+6\Z),(3+6\Z)\}$. 
 \item The only ideals of $\Z/8\Z$ are $(2+8\Z)$ and $(4+8\Z)$. A similar argument as above shows that $(2+8\Z)$ is a prime ideal. However, $6+8\Z\notin(4+8\Z)$ while $(6+8\Z)^2=4+8\Z\in(4+8\Z)$ which shows that $(4+8\Z)$ is not a prime ideal. 
@@ -266,7 +266,7 @@ Now the bijection is clear. $f_1^\ast\amalg f_2^\ast$ sends a prime ideal $P$ of
 \item $J$ is a prime ideal if and only if $\varphi(J)=J/I$ is a prime ideal. 
 \item $J$ is a maximal ideal if and only if $\varphi(J)=J/I$ is a maximal ideal. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Let $J$ be a radical ideal. Suppose that $r+I\in\sqrt{J/I}$. This means that $(r+I)^n=r^n+I\in J/I$ for some $n\in\N$. But this means that $r^n\in J$. This implies that $r\in\sqrt{J}=J$. Thus $r+I\in J/I$ and we conclude that $\sqrt{J/I}\subseteq J/I$. Since we also have $J/I\subseteq\sqrt{J/I}$, we conclude. \\
 
@@ -293,7 +293,7 @@ Another way to write the bijections is via spectra: $$\text{Spec}(R/I)\;\;\overs
 \item Closed under products: $(I_1I_2)^e=I_1^eI_2^e$
 \item $(\sqrt{I})^e\subseteq\sqrt{I^e}$
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Let $x\in I_1^e$. Then $x=\sum s_kf(i_k)$ for some $i_k\in I_1$. Then $i_k\in I_2$ implies that $x\in I_2^e$. 
 \item Since $I_1,I_2\subseteq I_1+I_2$, we have $I_1^e+I_2^e\subseteq(I_1+I_2)^e$. Conversely, let $x,\in(I_1+I_2)^e$. Then $x=\sum s_kf(i_k)$ for $i_k\in I_1+I_2$. Then we have $$x=\sum_{i_k\in I_1}s_kf(i_k)+\sum_{i_k\in I_2}s_kf(i_k)\in I_1^e+I_2^e$$ so we conclude. 
@@ -316,7 +316,7 @@ Another way to write the bijections is via spectra: $$\text{Spec}(R/I)\;\;\overs
 \item $(J_1J_2)^c\supseteq J_1^cJ_2^c$
 \item Closed under taking radicals: $\text{rad}(J)^c=\text{rad}(J^c)$
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Clear since $f^{-1}(J_1)\subseteq f^{-1}(J_2)$ for $J_1\subseteq J_2$. 
 \item Since $J_1,J_2\subseteq J_1+J_2$, we have that $J_1^c+J_2^c\subseteq(J_1+J_2)^c$. 
@@ -334,7 +334,7 @@ Another way to write the bijections is via spectra: $$\text{Spec}(R/I)\;\;\overs
 \item $I^e=I^{ece}$
 \item $J^c=J^{cec}$
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Let $x\in I$. Then $f(x)\in I^e$. Thus $x\in f^{-1}(I^e)$. 
 \item Since $J^{ce}$ is generated by $f(x)$ for all $x\in J^c$, it suffices to check that $f(x)\in J$ for all $x\in J^c$. But $x\in J^c$ implies that $f(x)\in J$ so we are done. 
@@ -445,7 +445,7 @@ Consider the collection $$\{m_1\cap\cdots\cap m_k\;|\;m_1,\dots,m_k\text{ are ma
 \item $\Z/24\Z$ is not a local ring. 
 \item $\R[x]$ is not a local ring. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item The only ideals of $\Z/6\Z$ are $(2+6\Z)$ and $(3+6\Z)$. They do not contain each other and so they are both maximal. 
 \item The only ideals of $\Z/8\Z$ are $(2+8\Z)$ and $(4+8\Z)$. But $(2+8\Z)\supseteq(4+8\Z)$. Hence $\Z/8\Z$ has a unique maximal ideal. 
@@ -477,7 +477,7 @@ By the above proposition, we conclude that $M$ is the unique maximal ideal of $k
 \item $N(R)$ is a maximal ideal. 
 \end{itemize}
 Under these equivalent assumptions, $(R,N(R))$ is a local ring. 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item $(1)\implies(2)$: We know that $N(R)$ is a prime ideal, hence it is the unique prime ideal and unique maximal ideal. Thus $R$ is a local ring. By the above, elements of $R\setminus N(R)$ are units and element of $N(R)$ are nilpotent. 
 \item $(2)\implies(3)$: It is clear that every nilpotent is a non-unit. By assumption, non-units of $R$ are nilpotents. Hence $N(R)$ is the set of all non-units. Since $N(R)$ is an ideal, by the above we conclude that $(R,N(R))$ is a local ring. In particular, $N(R)$ is the unique maximal ideal of $R$. 
@@ -494,7 +494,7 @@ Under these equivalent assumptions, $(R,N(R))$ is a local ring.
 \item $R$ has a unique prime ideal. 
 \item $N(R)$ is a maximal ideal of $R$. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item $(1)\implies(2)$: Let $R$ be Artinian and local. By 2.1.4 we have $N(R)=J(R)=m$ since $J(R)$ is the intersection of all maximal ideals. Since $R$ is Noetherian, by 2.1.3 $N(R)=m$ is nilpotent. 
 \end{itemize}
@@ -711,7 +711,7 @@ Thus we are done.
 	\arrow[from=2-4, to=2-5]
 \end{tikzcd}} \\ 
 are exact. 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item We first show that $g^\ast$ is injective. Let $\phi,\rho\in\Hom(C,G)$ such that $g^\ast(\phi)=g^\ast(\rho)$. This means that $\phi\circ g=\rho\circ g$. Let $c\in C$. Since $g$ is surjective, there exists $b\in B$ such that $g(b)=c$. Then $$\phi(c)=\phi(g(b))=\rho(g(b))=\rho(c)$$ Hence $\phi=\rho$. \\
 
@@ -966,7 +966,7 @@ By definition, $xy\in P$ implies $x\in P$ or $y\in P$, since $R\setminus P$ remo
 \item $(S^{-1}R,+,\times)$ is a ring
 \item The map $k:R\to S^{-1}R$ defined by $r\mapsto r/1$ is a ring homomorphism, called the localization map. 
 \end{itemize}
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Define addition by $\frac{r}{s}+\frac{r'}{s'}=\frac{rs'+r's}{ss'}$ and multiplication by $\frac{r}{s}\cdot\frac{r'}{s'}=\frac{rr'}{ss'}$. Clearly addition is abelian, and has identity $\frac{0}{1}$ and inverse $\frac{-r}{s}$ for any $\frac{r}{s}\in S^{-1}R$. Multiplication also has identity $\frac{1}{1}$. 
 \end{itemize}
@@ -999,7 +999,7 @@ Suppose that $R\to S^{-1}R$ is injective. Then $sr=0$ implies $r=0$ for all $s\i
 \item $\text{Frac}(R)=(0)$. 
 \item The localization map induces a ring isomorphism $$R\cong\bigcap_{m\text{ a maximal ideal}}R_m$$
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Suppose that $0=\frac{a}{s}\cdot\frac{b}{t}$. By the equivalence relation this is the same as saying that $uab=0$ for some $u\in S$. Since $R$ is an integral domain and $0\neq S$, we conclude that $u\notin S$ so that $ab=0$. Again since $R$ is an integral domain this implies that $a=0$ or $b=0$. Hence either $a/s=0$ or $b/t=0$ in $S^{-1}R$. Hence $S^{-1}R$ is an integral domain. 
 \item Trivial. 
@@ -1024,7 +1024,7 @@ Let $f:R\to S^{-1}R$ be the localization map. Then $f(I)\subseteq S^{-1}I$ impli
 \item $S^{-1}P=S^{-1}R$ if and only if $S\cap P\neq\emptyset$. 
 \end{itemize} 
 \begin{proof}
-Recall that $R/P$ is an integral domain if $P$ is prime. Since $S^{-1}$ commutes with quotients, we have that $$\frac{S^{-1}R}{S^{-1}P}\cong S^{-1}\frac{R}{P}$$~\\
+Recall that $R/P$ is an integral domain if $P$ is prime. Since $S^{-1}$ commutes with quotients, we have that $$\frac{S^{-1}R}{S^{-1}P}\cong S^{-1}\frac{R}{P}$$\\
 
 If $S\cap P=\emptyset$, then $0\in P$ implies that $0\notin S$. This means that $0\notin\phi(S)$. By 5.3.1 we conclude that $S^{-1}(R/P)$ is an integral domain. Hence $S^{-1}P$ is a prime ideal. If $S\cap P\neq\emptyset$, suppose that $x\in S\cap P$. Then ?????
 \end{proof}
@@ -1315,7 +1315,7 @@ It turns out that the minimal primes of the four sets coincide.
 \item $\{P\in\text{Spec}(R)\;|\;P\text{ is a minmal prime ideal over }\text{Ann}_R(M)\}$. 
 \item $\{P\in\text{Spec}(R)\;|\;P\text{ is minimal in }\{P_1,\dots,P_n\}\}$. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item $(1)=(4)$: By the above lemma, we have $$\text{Supp}(M)=\bigcup_{i=1}^n\{P\in\text{Spec}(R)\;|\;P_i\subseteq P\}=\bigcup_{P\in\{P_1,\dots,P_n\}\text{ minimal }}\{Q\in\text{Spec}(R)\;|\;P_k\subseteq Q\}$$ If $P$ is minimal in $\text{Supp}(M)$, then it is minimal in the union. Then $P\in\{Q\in\text{Spec}(R)\;|\;P_k\subseteq Q\}$ for some minimal $P_k$. If $P\neq P_k$ then evidently $P$ is not minimal, hence $P=P_k$. The converse is similar. 
 \item $(1)=(3)$: By 6.2.3, $\text{Supp}(M)=\{P\in\text{Spec}(R)\;|\;\text{Ann}_R(M)\subseteq P\}$ means that $P$ is a minimal prime ideal over $\text{Ann}_R(M)$ if and only if $P$ is minimal in $\text{Supp}(M)$. 
@@ -1449,7 +1449,7 @@ When $A$ and $B$ are field, this is a familiar notion in Field and Galois theory
 \item $A[b]\subseteq B$ is finitely generated $A$-submodule. 
 \item There exists an $A$ sub-algebra $A'\subseteq B$ such that $A[b]\subseteq A'$ and $A'$ is finitely generated as an $A$-module. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item $(1)\implies(2)$: Since $b$ is integral over $A$, $b^n=a_{n-1}b^{n-1}+\dots+a_1b+a_0$. Hence $A[b]=\bigoplus_{i=0}^{n-1}A\cdot b^i$ is a finitely generated $A$-module. 
 \item $(2)\implies(3)$: Choose $A'=A[b]$. 
@@ -1516,7 +1516,7 @@ Clearly the first statement implies the second. We first prove that for any moni
 \end{proof}
 \end{thm}
 
-\subsection{The Going-Up and Going-Down Theorems}
+\subsection{Four Main Theorems of Integral Extensions}
 We want to compare prime ideals between integral extensions. 
 
 \begin{lmm}{}{} Let $A,B$ be rings such that $A\subset B$ is an integral extension. Let $Q$ be a prime ideal of $B$. Then $Q\cap A$ is a maximal ideal of $A$ if and only if $Q$ is a maximal ideal of $B$. 
@@ -1525,12 +1525,26 @@ By 7.2.6, we know that $B/Q$ is integral over $A/Q\cap A$. By 7.2.7, $B/Q$ is a 
 \end{proof}
 \end{lmm}
 
-\begin{prp}{}{} Let $A,B$ be rings such that $A\subset B$ is an integral extension. Let $P$ be a prime ideal of $A$. Then the following are true. 
-\begin{itemize}
-\item There exists a prime ideal $Q$ of $B$ such that $P=Q\cap A$
-\item If $Q_1,Q_2$ are prime ideals of $B$ such that $Q_1\cap A=P=Q_2\cap B$ and $Q_1\subseteq Q_2$, then $Q_1=Q_2$. 
-\end{itemize} 
-\begin{proof}
+\begin{thm}{The Lying Over Theorem}{}\\
+Let $A,B$ be rings such that $A\subset B$ is an integral extension. Let $P$ be a prime ideal of $A$. Then there exists a prime ideal $Q$ of $B$ such that $P=Q\cap A$
+\begin{proof}\\
+Let $\alpha:A\to A_P$ and $\beta:B\to B_P$ be the localization maps. Consider the following commutative diagram. \\
+\adjustbox{scale=1.0,center}{\begin{tikzcd}
+	A & B \\
+	{A_P} & {B_P}
+	\arrow[hook, from=1-1, to=1-2]
+	\arrow["\alpha"', from=1-1, to=2-1]
+	\arrow["\beta", from=1-2, to=2-2]
+	\arrow[hook, from=2-1, to=2-2]
+\end{tikzcd}}\\
+Since $PB_P$ is the unique maximal ideal of $B_P$, we know that $PA_P=PB_P\cap A_P$ is the unique maximal ideal of $A_P$. On the other hand, we also know that $\beta^{-1}(PB_P)$ is a prime ideal of $B$. By commutativity of the diagram, we have that $P$ is mapped to $\beta^{-1}(PB_P)$. Then by definition of extension we have that $\beta^{-1}(PB_P)\cap B=P$. 
+\end{proof}
+\end{thm}
+
+\begin{thm}{The Incomparability Theorem}{} Let $A,B$ be rings such that $A\subset B$ is an integral extension. If $Q_1\neq Q_2$ are distinct prime ideals of $B$ such that $Q_1\cap A=P=Q_2\cap B$, then $Q_1\not\subset Q_2$ and $Q_2\not\subset Q_1$. 
+\begin{proof}\\
+We prove the contrapositive statement. That is, if $Q_1,Q_2$ are prime ideals of $B$ such that $Q_1\cap A=P=Q_2\cap B$ and $Q_1\subseteq Q_2$, then $Q_1=Q_2$. \\
+
 Let $\alpha:A\to A_P$ and $\beta:B\to B_P$ be the localization maps. Consider the following commutative diagram. \\
 \adjustbox{scale=1.0,center}{\begin{tikzcd}
 	A & B \\
@@ -1544,9 +1558,9 @@ Since $PB_P$ is the unique maximal ideal of $B_P$, we know that $PA_P=PB_P\cap A
 
 Let $Q_1,Q_2$ be as given. We have that $$(Q_1\cap A)A_P=PA_P=(Q_2\cap A)A_P$$ is the same maximal ideal of $A_P$ since they both contract to $P$ in $A$. By the above lemma, $(Q_1\cap A)B_P$ and $(Q_2\cap A)B_P$ are both maximal ideals of $B_P$. By commutativity of the diagram, $(Q_1\cap A)B_P=Q_1B_P$ and $(Q_2\cap A)B_P=Q_2B_P$. Since $Q_1\subseteq Q_2$, we have that $Q_1B_P\subseteq Q_2B_P$. Since $Q_1B_P$ and $Q_2B_P$ are both maximal ideals, they must be equal. Hence by contraction we deduce that $Q_1=Q_2$. 
 \end{proof}
-\end{prp}
+\end{thm}
 
-\begin{thm}{The Going-Up Theorem}{} Let $A,B$ be rings such that $A\subset B$ is an integral extension. Let $0\leq m<n$. Consider the following situation \\
+\begin{thm}{The Going-Up Theorem}{} Let $A,B$ be commutative rings such that $A\subset B$ is an integral extension. Let $0\leq m<n$. Consider the following situation \\
 \adjustbox{scale=1.0,center}{\begin{tikzcd}
 	B & {Q_1\subseteq\cdots\subseteq Q_m} && {(\text{Prime ideals of }B)} \\
 	A & {P_1\subseteq\cdots\subseteq P_m} & {\subseteq P_{m+1}\subseteq\cdots\subseteq P_n} & {(\text{Prime ideals of }A)}
@@ -1557,8 +1571,11 @@ where $Q_i\cap A=P_i$ for $1\leq i\leq m$. Then there exists prime ideals $Q_{m+
 \item $Q_{m+1}\subseteq\cdots\subseteq Q_n$
 \item $Q_i\cap A=P_i$ for $m+1\leq i\leq n$
 \end{itemize} 
+Moreover, if the chain of prime ideals of $A$ is strictly increasing the new chain of prime ideals in $B$ is strictly increasing. 
 \begin{proof}
-By induction, it suffices to prove the case $m=1$ and $n=2$. This means that we want to find a prime ideal $Q_2$ such that $Q_1\subseteq Q_2$ and $Q_2\cap A=P_2$. By 7.2.6, $B/Q_1$ is integral over $A/P_1$. Since $P_2/P_1$ is a prime in $A/P_1$ by the correspondence theorem, by 7.3.2 there exists a prime ideal $Q_2/Q_1$ in $B/Q_1$ such that $Q_2/Q_1\cap A/P_1=P_2/P_1$. This implies that $Q_2\cap A=P_2$. Hence we are done. 
+By induction, it suffices to prove the case $m=1$ and $n=2$. This means that we want to find a prime ideal $Q_2$ such that $Q_1\subseteq Q_2$ and $Q_2\cap A=P_2$. By 7.2.6, $B/Q_1$ is integral over $A/P_1$. Since $P_2/P_1$ is a prime in $A/P_1$ by the correspondence theorem, by 7.3.2 there exists a prime ideal $Q_2/Q_1$ in $B/Q_1$ such that $Q_2/Q_1\cap A/P_1=P_2/P_1$. This implies that $Q_2\cap A=P_2$. \\
+
+Finally, suppose that the chain of prime ideals in $A$ is strictly increasing. Suppose for a contradiction that $Q_i=Q_{i+1}$. Then we must have $P_i=Q_i\cap A=Q_{i+1}\cap A=P_{i+1}$, a contradiction. 
 \end{proof}
 \end{thm}
 
@@ -1661,15 +1678,14 @@ In particular, notice that a commutative ring $R$ has $\dim(R)=0$ if and only if
 \begin{lmm}{}{} Let $R$ be a commutative ring. Let $I$ be an ideal of $R$. Then we have $\dim(R)\geq\dim(R/I)$. 
 \end{lmm}
 
-\begin{lmm}{}{} Let $R,S$ be commutative rings such that $R\subseteq S$ is an integral extension. Then $\dim(R)=\dim(S)$. 
-\end{lmm}
+\begin{lmm}{}{}\\
+Let $R,S$ be commutative rings such that $R\subseteq S$ is an integral extension. Then we have $$\dim(R)=\dim(S)$$
+\begin{proof}
+Let $P_0\subset\cdots\subset P_n$ be a strictly increasing chain of prime ideals of $R$. By the going up theorem, we obtain an increasing chain of prime ideals $Q_0\subseteq\cdots\subseteq Q_n$ in $S$. Hence $\dim(R)\leq\dim(S)$. \\
 
-\begin{prp}{}{} Let $F$ be a field. Let $n\in\N\setminus\{0\}$. Then the following are true. 
-\begin{itemize}
-\item $\dim(F[x_1,\dots,x_n])=n$. 
-\item Every maximal chain prime ideals in $F[x_1,\dots,x_n]$ is of length $n$. 
-\end{itemize}
-\end{prp}
+Conversely, suppose that $Q_0\subset\cdots\subset Q_n$ is a strictly increasing chain of prime ideals in $S$. Then $\varphi^{-1}(Q_0)\subseteq\cdots\subseteq\varphi^{-1}(Q_n)$ is an increasing chain of prime ideals of $R$. Hence $\dim(S)\leq\dim(R)$. 
+\end{proof}
+\end{lmm}
 
 \begin{lmm}{}{} Let $R$ be a commutative ring. Then the following are true. 
 \begin{itemize}
@@ -1693,6 +1709,46 @@ We know that the set of all minimal prime ideals of $\text{Ass}(M)$ is equal to 
 \end{proof}
 \end{prp}
 
+\subsection{Noether Normalization Lemma}
+\begin{lmm}{}{}\\
+Let $k$ be a field. Let $T$ be a finite set of monomials in $k[x_1,\dots,x_n]$. Then there exists $w_1,\dots,w_{n-1}$ such that for any two $a_{k_1,\dots,k_n}x_1^{k_1}\cdots x_n^{k_n},b_{r_1,\dots,r_n}x_1^{r_1}\cdots x_n^{r_n},\in T$, $(k_1,\dots,k_n)\neq(j_1,\dots,j_n)$ implies that $$\sum_{i=1}^{n-1}w_ik_i+k_n\neq\sum_{i=1}^{n-1}w_ij_i+j_n$$
+\begin{proof}
+We induct on $n$. When $n=1$ then we are done. When $n\geq 2$, we can write each monomial in $T$ as a monomial in $x_2,\dots,x_n$ to apply the inductive hypothesis and obtain $w_2,\dots,w_n$. Then set $w_1>\max\{\sum_{i=2}^{n-1}w_ik_i+k_n\;|\;(k_1,\dots,k_n)\text{represents a monomial in }T\}$. For $(k_1,\dots,k_n)\neq(j_1,\dots,j_n)$ there are two cases. If $(k_2,\dots,k_n)\neq(j_2,\dots,j_n)$, then by inductive hypothesis we have $\sum_{i=2}^{n-1}w_ik_i+k_{n-1}\neq\sum_{i=2}^{n-1}w_ij_i+j_n$. Since $w_1$ is larger than these two numbers, we must have that $\sum_{i=1}^{n-1}w_ik_i+k_n\neq\sum_{i=1}^{n-1}w_ij_i+j_n$. Otherwise, if $(k_2,\dots,k_n)=(j_2,\dots,j_n)$ but $k_1\neq j_1$, then $w_1k_1\neq w_1j_1$ and so we are done. 
+\end{proof}
+\end{lmm}
+
+\begin{thm}{Noether Normalization Lemma}{}\\
+Let $k$ be a field. Let $R$ be a finitely generated $k$-algebra with the isomorphism $R\cong\frac{k[x_1,\dots,x_n]}{I}$ for some ideal $I$. Then there exists $y_1,\dots,y_d\in R$ for some $0\leq d\leq n$ such that the following are true. 
+\begin{itemize}
+\item $y_1,\dots,y_d$ are algebraically independent. 
+\item $R$ is finitely generated over $k[y_1,\dots,y_d]$. 
+\item $d=\dim(R)$. 
+\end{itemize}
+\begin{proof}\\
+Since $R$ is a finitely generated $k$-algebra, we have $R\cong\frac{k[x_1,\dots,x_n]}{I}$ for some $n\in\N$ and some ideal $I$. We induct on $n$. When $n=1$, we have $R\cong\frac{k[x]}{I}$. Since $k[x]$ is a PID, $I=(f)$ for some $f\in k[x]$. If $f=0$, then we are done. So suppose that $f\neq 0$. Then $R$ is a generated as a $k$-vector space by $1,x,\dots,x^{\deg(f)-1}$. Thus $R$ is finitely generated over $k[x]$. \\
+
+Now suppose that $n\geq 2$. If each $x_1,\dots,x_n$ are algebraically independent then we are done. So suppose not. Then I claim that there is a $k$-subalgebra $S$ of $R$ generated by $n-1$ elements such that $R$ is finitely generated over $S$. Since $x_1,\dots,x_n$ are not algebraically independent, there exists a polynomial in $k$ such that $f(x_1,\dots,x_n)=0$. For $r_1,\dots,r_{n-1}\in\N$, write $z_i=x_i-x_n^{r_i}$. Then we have $$f(z_1+x_n^{r_1},\dots,z_{n-1}+x_n^{r_{n-1}},x_n)=0$$ If the polynomial $f$ has coefficients $a_{k_1,\dots,k_n}$, then expanding out the expression, we have $$\sum a_{k_1,\dots,k_n}\prod_{i=1}^{n-1}(z_i+x_n^{r_i})^{k_i}x_n^{k_n}=0$$ Each term in the summand has a unique term with highest order of $x_n$ after expanding, which is given by $a_{k_1,\dots,k_n}x_n^{\sum_{i=1}^nr_{i-1}k_i+k_n}$. By the above lemma, we can find $r_1,\dots,r_{n-1}$ such that $(k_1,\dots,k_n)\neq(j_1,\dots,j_n)$ implies that $\sum_{i=1}^nr_{i-1}k_i+k_n\neq\sum_{i=1}^nr_{i-1}j_i+j_n$. Then this means that there is a unique term that achieves the maximum of $\sum_{i=1}^{n-1}r_ik_i+k_n$. This proves that the highest term of $f$ as a polynomial in $y_n$ has coefficient $a_{k_1,\dots,k_n}$ for some $k_1,\dots,k_n$. Dividing out $f$ by this coefficient, we deduce that $x_n$ is an integral element over $k[z_1,\dots,z_{n-1}]$. This proves that $S=k[z_1,\dots,z_{n-1}]$ is a $k$-subalgebra of $R$ such that $R$ is finitely generated over $S$. \\
+
+By the inductive hypothesis, there exists $y_1,\dots,y_d$ for some $0\leq d\leq n-1$ such that $y_1,\dots,y_d$ are algebraically independent and $S$ is finitely generated over $k[y_1,\dots,y_d]$. Since $R$ is finitely generated over $S$ and $S$ is finitely generated over $k[y_1,\dots,y_d]$, we conclude that $R$ is finitely generated over $k[y_1,\dots,y_d]$. \\
+
+It remains to show that $d=\dim(R)$. Since $R$ is integral over $S=k[y_1,\dots,y_d]$, we have $\dim(R)=\dim(S)$ and so it suffices to show that $d=\dim(S)$. We induct on $d$. When $d=0$, then $S=k$ and so $\dim(S)=0$. Now let $d>0$. Then $0\subset(y_1)\subset(y_1,y_2)\subset\cdots\subset(y_1,\dots,y_d)$ is a chain of prime ideals in $S$ so that $d\leq\dim(S)$. Conversely, suppose that $0\subset P_1\subset\cdots\subset P_n$ is a strictly increasing chain of prime ideals in $S$. Let $0\neq u\in P_1$. By the Noether normalization lemma, because first variable is always trivially algebraically independent, there exists $t_2,\dots,t_d\in S$ such that $S$ is integral over $T=k[u,t_2,\dots,t_d]$. By the inductive hypothesis, we have $d-1=\dim(T/(u))$. By the going up theorem, $0\subset P_1\cap T\subset\cdots\subset P_n\cap T$ is a strictly increasing chain of prime ideals in $T$. Then in $T/(P_1\cap T)$ the chain becomes a strictly increasing chain of prime ideals of length $n-1$. Since $\dim(T/(P_1\cap T)\leq\dim(T/(u))$, we have that $n-1\leq d-1$ and hence $\dim(S)\leq d$. 
+\end{proof}
+\end{thm}
+
+\begin{prp}{}{}\\
+Let $k$ be a field. Let $R$ be a finitely generated $k$-algebra that is an integral domain. Then we have $$\dim(R)=\text{trdeg}_k(\text{Frac}(R))$$
+\begin{proof}
+By the Noether normalization lemma, there exists algebraically independent elements $y_1,\dots,y_{\dim(R)}$ such that $R$ is finitely generated over $k[y_1,\dots,y_{\dim(R)}]$. Then $\text{Frac}(R)$ is algebraic over $\text{Frac}(k[y_1,\dots,y_{\dim(R)}])=k(y_1,\dots,y_{\dim(R)})$. Hence $\text{trdeg}_k(\text{Frac}(R))=\dim(R)$. 
+\end{proof}
+\end{prp}
+
+\begin{crl}{}{}\\
+Let $k$ be a field. Then we have $$\dim(k[x_1,\dots,x_n])=n$$
+\begin{proof}
+The transcendence degree of $\text{Frac}(k[x_1,\dots,x_n])=k(x_1,\dots,x_n)$ is $n$. 
+\end{proof}
+\end{crl}
+
 \subsection{Height of Prime Ideals}
 \begin{defn}{Height of a Prime Ideal}{} Let $R$ be a commutative ring. Let $p$ be a prime ideal of $R$. Define the height of $p$ to be $$\text{ht}(p)=\max\{t\in\N\;|\;p_0\subset\dots\subset p_t=p\text{ for }p_0,\dots,p_t\text{ prime ideals }\}$$
 \end{defn}
@@ -1711,11 +1767,7 @@ The two inequalities combine to show that $\dim(R_P)=\text{ht}(P)$.
 \begin{lmm}{}{} Let $R$ be a commutative ring. Let $P$ be a prime ideal of $R$. Then $$\dim(R)\geq\dim(R/P)+\text{ht}_R(P)$$
 \end{lmm}
 
-\begin{prp}{}{} Let $k$ be a field. Let $A$ be an integral domain that is a finitely generated $k$-algebra. Then the following are true. 
-\begin{itemize}
-\item $\dim(A)=\text{trdeg}_k(\text{Frac}(A))$
-\item For any prime ideal $P$ of $A$, we have $$\dim(A)=\dim(A/P)+\text{ht}_A(P)$$
-\end{itemize}
+\begin{prp}{}{} Let $k$ be a field. Let $R$ be a finitely generated $k$-algebra that is an integral domain. Then we have $$\dim(A)=\dim(A/P)+\text{ht}_A(P)$$
 \end{prp}
 
 \begin{prp}{Dimension is a Local Concept}{} Let $R$ be a commutative ring. Then the following numbers are equal. 
@@ -1886,7 +1938,7 @@ The valuation ring of $\text{ord}_n$ for $n$ prime is given by $$R_{\text{ord}_n
 \item The valuation of any element $r=ut^n\in R$ is given by $$v(ut^n)=n$$
 \item The set of all ideals of $R$ is given by $$\{(t^n)\;|\;n\in\N\setminus\{0\}\}$$ In particular, the unique maximal ideal of $R$ is $(t)$. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item If $x\in R$ is a unit then we are done. If not, then consider the element $u=t^{-n}x$ for $n=v(x)$. Then we have $$v(u)=v(t^{-n}x)=-n+v(x)=0$$ Hence $u$ is a unit. Multiplying $t^n$ on both sides of $u=t^{-n}x$ proves that $x=ut^n$ for some unit $u$ and $n\in\N$. 
 \item It follows that the valuation of $r=ut^n$ is $n$. 
@@ -1905,7 +1957,7 @@ The rest of the section devotes efforts to recognizing discrete valuation rings.
 \item $R$ is Noetherian, local, $\dim(R)>0$ and the unique maximal ideal $m$ is principal. 
 \item $R$ is a UFD with a unique irreducible element up to multiplication of a unit
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item $(1)\implies(2)$: We have seen that valuation rings are local. It is a PID by 9.2.5. It is not a field since $R$ is a local ring with non-trivial unique maximal ideal. 
 \item $(2)\implies(3)$: Every PID is Noetherian and normal and every prime ideal is maximal. But local rings have a unique maximal ideal. The maximal ideal is non-trivial since $R$ is not a field. Hence $\dim(R)=1$. 
@@ -2025,7 +2077,7 @@ Since $I^{-1}I=r$, write $1=\sum_{i=1}^ks_ia_i$ for $s_i\in I^{-1}$ and $a_i\in 
 \item If $I$ is invertible, then $I$ is fractional. 
 \item If $I$ is invertible, then $I$ is finitely generated. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item Suppose that $I=(a)$ for $a\in R$. Then clearly we have $(1/a)(a)=R$. 
 \item Let $I$ be invertible. Since $I^{-1}I=R$, we can write $1=\sum_{i=1}^ns_ia_i$ for $s_i\in I^{-1}$ and $a_i\in I$. Then for any $r\in R$, we have $b=\sum_{i=1}^ks_i(a_ib)$ where $a_ib\in R$. Let $s$ be the product of the denominators of $s_i$. Then $sb\in R$. Hence $I$ is a fractional ideal. 
@@ -2066,7 +2118,7 @@ Dedekind sought for an integral domain whose ideals can be factorized uniquely a
 \item $R$ is Noetherian, $\dim(R)=1$ and for any non-zero maximal ideal $m$ of $R$, $R_m$ is a discrete valuation ring. 
 \item $R$ is Noetherian, $\dim(R)=1$ and every primary ideal in $R$ is a prime power. 
 \end{itemize} 
-\begin{proof}~\\
+\begin{proof}\\
 \begin{itemize}
 \item $(1)\implies(2)$: For any ideal $I$ of $R$, $I$ is invertible. By 10.2.6, $I$ is finitely generated. Then every $R$-submodule of $R$ is finitely generated and so $R$ is Noetherian. For any prime ideal $P$ of $R$, 10.2.8 implies that $R_P$ is a discrete valuation ring since $P$ by assumption is invertible. Then $R_P$ is a normal domain for any prime ideal $P$. Since normality is a local condition, we conclude that $R$ is a normal domain. 
 
