--- a/Geometry and Topology/Algebraic Geometry 1/Algebraic Geometry 1.tex
+++ b/Geometry and Topology/Algebraic Geometry 1/Algebraic Geometry 1.tex
@@ -1043,22 +1043,14 @@ Now suppose that $\dim(V_k)$ achieves the number $m$ for some $k$. Let $Y_1\subs
 \end{proof}
 \end{lmm}
 
-\begin{prp}{}{} Let $V\subseteq\A_\C^n$ be an affine variety. Then $$\dim(V)=\dim(\C[V])$$ 
-\begin{proof}
-Any chain of irreducible subvarieties of $V$ corresponds to a chain of prime ideals in $\C[V]$. 
-\end{proof}
+\begin{prp}{}{}\\
+Let $k$ be an algebraically closed field. Let $V$ be an affine variety over $k$. Then we have $$\dim(V)=\dim(k[V])=\text{ht}(\I(V))$$
 \end{prp}
 
 \begin{prp}{}{} Let $V\subseteq\Prj_\C^n$ be an projective variety. Then $$\dim(V)=\dim(\C^H[V])-1$$
 \end{prp}
 
 Note: the definition of dimension ignores any grading structure put on to the coordinate ring. Hence we do not get equal numbers between $\dim(V)$ and $\dim(\C^H[V])$. 
-
-\begin{lmm}{}{} Let $n\in\N$. Then $\dim(\Prj^n)=\dim(A^n)=n$. 
-\begin{proof}
-We have seen in Commutative Algebra 1 that $\dim(k[x_1,\dots,x_n])=n$. By the above lemma $\dim(\A_k^n)=\dim(k[x_1,\dots,x_n])=n$. 
-\end{proof}
-\end{lmm}
 
 \begin{prp}{}{} A variety $V$ in $\A^n$ has dimension $n-1$ if and only of it is the zero set of a single nonconstant irreducible polynomial in $k[x_1,\dots,x_n]$. 
 \end{prp}
